# VM_Translator

./: CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  out.casm  test.asm
Debug/: test.casm
src/: c2t.cpp  c2t.h  dir.h  dirWin.c  main.cpp
src/parser/: build.bat  file_writer.c  file_writer.cpp  file_writer.h  scanner.cpp  scanner.h  vmth.tab.c  vmth.tab.h  vmth.y
test/: Main.vm  Sys.vm  out.casm
vmth.dir/Debug/: vmth.exe.recipe
vmth.dir/Debug/vmth.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vmth.lastbuildstate
